fix menu link alignment

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -28,7 +28,7 @@ $primary: #32C1EE
           text-decoration: none
       .menu
         padding: 10px 0
-        margin-top: 24px
+        margin-top: 20px
         font-size: 18px
         a
           color: white
